Add vanilla unicorn and armor attachments